fix(v2): hide doc sidebar on mobiles (#2631)

--- a/packages/docusaurus-theme-classic/src/theme/DocPage/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/DocPage/styles.module.css
@@ -25,4 +25,8 @@
   .docPage {
     display: inherit;
   }
+
+  .docSidebarContainer {
+    display: none;
+  }
 }
